@@ -19,4 +19,56 @@
         <name>rowCountVar</name>
         <type>java.lang.String</type>
     </field>
+    <field>
+        <name>onclick</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>ondblclick</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onkeydown</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onkeypress</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onkeyup</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onmousedown</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onmousemove</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onmouseout</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onmouseover</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>onmouseup</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>style</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>styleClass</name>
+        <type>java.lang.String</type>
+    </field>
+    <field>
+        <name>title</name>
+        <type>java.lang.String</type>
+    </field>
 </component>
